@@ -90,7 +90,7 @@ class PicasaPhotoList(PhotoList):
             owner_name = entry['author'][0]['name']['$t'] \
                 if entry.get('author') else self.argument
 
-            data = {'url'        : entry['content']['src'],
+            data = {'url'        : str(entry['content']['src']),
                     'owner_name' : owner_name,
                     'owner'      : owner_name,
                     'id'         : entry['gphoto$id']['$t'],
